<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amrita Placement Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="a">WELCOME TO AMRITA PLACEMENT TRAINER</string>
    <string name="b">SIGN UP</string>
    <string name="c">LOGIN</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="d">USER NAME</string>
    <string name="e">PASSWORD</string>
    <string name="d1"></string>
    <string name="d2"></string>
    <string name="f">LOGIN</string>
    <string name="title_activity_signup">Signup</string>
    <string name="g">Name</string>
    <string name="h">Register Number</string>
    <string name="i">Email id</string>
    <string name="j">Phone Number</string>
    <string name="k">User name</string>
    <string name="l">Password</string>
    <string name="g2">Student</string>
    <string name="g1">People Logged in</string>
    <string name="h1">Logout</string>
    <string name="h2">CB.EN.U4CSE13163</string>
    <string name="i1">student@mail.com</string>
    <string name="j1">987654321</string>
    <string name="k1"></string>
    <string name="k2"></string>
    <string name="l1">Password</string>
    <string name="m">SIGNUP</string>
    <string name="title_activity_loginsuccess">Loginsuccess</string>
    <string name="title_activity_signupsuccess">Signupsuccess</string>
    <string name="n">You have been signed in successfully.</string>
    <string name="o">Now you can login with your user name and password.</string>
    <string name="p">Login</string>
    <string name="q">Aptitude</string>
    <string name="r">Verbal</string>
    <string name="s">Technical</string>
    <string name="title_activity_aptitudesections">Aptitudesections</string>
    <string name="title_activity_aptitudeselect">Aptitudeselect</string>
    <string name="B1">Practise Test</string>
    <string name="b2">Main Test</string>
    <string name="title_activity_aptiprac">Aptiprac</string>
    <string name="b3">NUMBER SYSTEM</string>
    <string name="b4">RATIOS</string>
    <string name="b5">PROFIT_ LOSS</string>
    <string name="b6">PIPES</string>
    <string name="b7">TRAIN</string>
    <string name="b8">PROBABILITY</string>
    <string name="b9">AGES</string>
    <string name="b10">SURDS</string>
    <string name="b11">AVERAGE</string>
    <string name="b12">TIME_AND_WORK</string>
    <string name="b13">BOAT_STREAM</string>
    <string name="b14">CLOCKS AND CALENDARS</string>
    <string name="b15">TIME_AND_DISTANCE</string>
    <string name="title_activity_aptimain">Aptimain</string>
    <string name="title_activity_verbselect">Verbselect</string>
    <string name="b16">Practise Test</string>
    <string name="b17">Main Test</string>
    <string name="title_activity_techselect">Techselect</string>
    <string name="b18">Practise Test</string>
    <string name="b20">Main Test</string>
    <string name="title_activity_verbprac">Verbprac</string>
    <string name="title_activity_verbmain">Verbmain</string>
    <string name="title_activity_techprac">Techprac</string>
    <string name="title_activity_techmain">Techmain</string>
    <string name="c1">Data structures</string>
    <string name="c2">DBMS</string>
    <string name="c3">Operating systems</string>
    <string name="c4">Networks</string>
    <string name="c5">Java</string>
    <string name="c6">Software Engineering</string>
    <string name="c7">Computer Architecture</string>
    <string name="c8">Algorithms</string>
    <string name="c9">SYNONYMS</string>
    <string name="c10">ANTONYMS</string>
    <string name="c11">SYLLOGISM</string>
    <string name="c12">READING COMPREHENSION</string>
    <string name="c13">ERROR SPOTING</string>
    <string name="c15">ACTIVE VOICE,PASSIVE VOICE</string>
    <string name="c14">IDIOMS AND PRRASES</string>
    <string name="c17">IDIOMS AND PHRASES</string>
    <string name="title_activity_maintest">Maintest</string>
    <string name="title_activity_practicetest">Practicetest</string>
    <string name="i0">Welcome \nto</string>
    <string name="m2">to</string>
    <string name="m4">Amrita Placement Trainer</string>
    <string name="v">Reset</string>
    <string name="i2">Forgot password?</string>
    <string name="xc">You have signed up successfully!!!</string>
    <string name="df">Please login with your credentials!!</string>
    <string name="cv">"You have signed "</string>
    <string name="xv">You have signed up successfully</string>
    <string name="bn">You have signed up</string>
    <string name="asd">You have signed up</string>
    <string name="zxc">successfully!!!</string>
    <string name="zb">Please login with your credentials</string>
    <string name="cb">please login with your</string>
    <string name="sd">"please login with "</string>
    <string name="fg">credentials</string>
    <string name="jk">Please login with your credentials</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="qw">User Name</string>
    <string name="as">E-mail</string>
    <string name="ml"></string>
    <string name="kl"></string>
    <string name="we"></string>
    <string name="rt">Retrieve Password</string>
    <string name="title_activity_practicedisplay">Practicedisplay</string>
    <string name="button1">Next</string>
    <string name="title_activity_test_result">TestResult</string>
    <string name="title_activity_references_list">ReferencesList</string>
    <string name="title_activity_file">FileActivity</string>

</resources>
