<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AFF0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Aptiprac">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b9"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/retrievepass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b3"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b5"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b7"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b6"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#0182B3"
                android:onClick="clicking"
                android:text="@string/b4"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="clicking"
                android:background="#0182B3"
                android:text="@string/b11"
                android:textColor="#ffffff" />



            <Button
                android:id="@+id/button11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="clicking"
                android:background="#0182B3"
                android:text="@string/b14"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="clicking"
                android:background="#0182B3"
                android:text="@string/b12"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="clicking"
                android:background="#0182B3"
                android:text="@string/b15"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="clicking"
                android:background="#0182B3"
                android:text="@string/b13"
                android:textColor="#ffffff" />
        </LinearLayout>

</ScrollView>