<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00AFF0"
    tools:context=".Techprac" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/retrievepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/c1"
            android:onClick="clicking"
            android:background="#0182B3"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c4"
            android:layout_marginTop="10dp"
            android:onClick="clicking"
            android:background="#0182B3"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c3"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c6"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c5"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c2"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c7"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0182B3"
            android:onClick="clicking"
            android:layout_marginTop="10dp"
            android:text="@string/c8"
            android:textColor="#ffffff" />

    </LinearLayout>


</ScrollView>
