<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00AFF0"
    tools:context=".Verbprac" >

    <Button
        android:id="@+id/retrievepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:text="@string/c9"
        android:gravity="left" 
        android:textColor="#ffffff"
        android:background="#0182b3"
        
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/retrievepass"
        android:layout_below="@+id/retrievepass"
        android:background="#0182b3"
        android:gravity="left"
        android:text="@string/c11"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:background="#0182b3"
        android:gravity="left"
        android:text="@string/c12"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:background="#0182b3"
        android:gravity="left"
        android:text="@string/c13"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_below="@+id/button6"
        android:background="#0182b3"
        android:gravity="left"
        android:text="@string/c15"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:background="#0182b3"
        android:gravity="left"
        android:text="@string/c17"
        android:textColor="#ffffff" />

</RelativeLayout>
